# lesgif-wip

./: Cargo.toml
.cargo/: config.toml
.sqlx/: query-662dc1a096373864d32d411f9dbec7485721a6176ff08a9b92a57173d13170f2.json  query-cd09ff4bc5fe1e5213a98b7bafbe85e7fc3be14856b532d197e841cda236d31f.json
crates/floodgate/: TODO.md
crates/floodgate/src/: client.rs
crates/gifdex-appview/src/: main.rs
crates/gifdex-cdn/src/: main.rs
crates/gifdex-cdn/src/routes/: avatar.rs  gif.rs  mod.rs
crates/gifdex-ingest/src/: database.rs
crates/gifdex-ingest/src/handlers/: mod.rs
crates/gifdex-ingest/src/handlers/actor/: profile.rs
crates/gifdex-ingest/src/handlers/feed/: favourite.rs  post.rs
crates/gifdex-ingest/src/handlers/identity/: mod.rs
crates/gifdex-ingest/src/handlers/labeler/: rule.rs  (+1 more)
crates/gifdex-lexicons/src/net_gifdex/: actor.rs  feed.rs
crates/lesgif-appview/src/: database.rs
crates/lesgif-ingest/: Cargo.toml
crates/lesgif-ingest/src/: database.rs  main.rs  tap.rs
crates/lesgif-ingest/src/handlers/: identity.rs
crates/lesgif-lexicons/: Cargo.toml
crates/lesgif-lexicons/src/: lib.rs  net_dollware.rs
crates/lesgif-lexicons/src/net_dollware/: lesgif.rs
crates/sqlx-migrations/: 20260113201040_init.sql
frontend/: eslint.config.js  package-lock.json  package.json  svelte.config.js
frontend/src/lib/styles/: theme.css
frontend/src/routes/: +layout.svelte
lexicons/actor/: defs.json  getPosts.json  profile.json
lexicons/feed/: defs.json  favourite.json  post.json
lexicons/moderation/: label.json
migrations/: 20260113201040_init.sql
(+27 files in other folders)
