[package]
name = "lesgif-ingest"
edition = "2024"

[lints.rust]
unsafe_code = "forbid"

[profile.release]
lto = true
codegen-units = 1

[dependencies]
anyhow = { version = "1.0.99", features = ["backtrace"] }
clap = { version = "4.5.54", features = ["derive", "env"] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.49.0", features = [
    "macros",
    "rt-multi-thread",
    "signal",
    "net",
] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
dotenvy = "0.15.7"
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = [
    "runtime-tokio",
    "postgres",
    "tls-rustls",
] }
chrono = { version = "0.4.43", features = ["serde"] }
mime = "0.3.17"
tokio-tungstenite = { version = "0.28.0", features = ["rustls"] }
futures = "0.3.31"
url = { version = "2.5.8", features = ["serde"] }
base64 = "0.22"
jacquard-common = "0.9.5"
lesgif-lexicons = { path = "../lesgif-lexicons" }
